--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,3 +7,4 @@ pipelines:
         - python3 -m venv
         - source venv/bin/activate
         - -m pip install -r requirements.txt
+        - gunicorn -w 4 'brew:create_app()'
