--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,12 @@
 runtime: python310
+
+image: python3.10
+
+pipelines:
+  default:
+    - step:
+      script:
+        - python3 -m venv
+        - source venv/bin/activate
+        - -m pip install -r requirements.txt
+        - gunicorn -w 4 'brew:create_app()'
