--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,15 +3,13 @@ image: python3.10
 pipelines:
   default:
     - step:
-      name: build
-      script:
-        - python3 -m venv
-        - source venv/bin/activate
-        - -m pip install -r requirements.txt
-        - gunicorn -w 4 'brew:create_app()'
-        - python3 -m flask --app brew init-db
+        name: build
+        script:
+          - python3 -m venv venv # Create Virtual Environment
+          - source venv/bin/activate # Activate Virtual Environment
+          - pip install -r requirements.txt #  Install Dependencies
     - step:
-      name: Deploy to Railway
-      script:
-        - bash <(curl -fsSL cli.new)
-        - RAILWAY_TOKEN=$RAILWAY_TOKEN railway up
+        name: Deploy to Railway
+        script:
+          - bash <(curl -fsSL cli.new) # Install Railway CLI
+          - RAILWAY_TOKEN=$RAILWAY_TOKEN railway up # Deploy to Railway
