--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,7 @@
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
+buildCommand = "gunicorn \"brew:create_app()\""
+dockerfilePath = "Dockerfile"
 
 [deploy]
 numReplicas = 1
